// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should render correctly 1`] = `
<a
  href="https://test.com"
  onClick={[Function]}
>
  tester
</a>
`;

exports[`Link should render correctly 2`] = `
<a
  href="https://test.com"
  onClick={[Function]}
>
  test
</a>
`;
